--- a/index.html
+++ b/index.html
@@ -231,6 +231,15 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+
+  <!--  Шаблон комментария в модальном окне с фото-->
+  <template id="comment">
+    <li class="social__comment">
+      <img class="social__picture" src="" alt="" width="35" height="35">
+      <p class="social__text"></p>
+    </li>
+  </template>
+
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
